--- a/Appology.MVC/Areas/Finance/Views/App/Settings.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/App/Settings.cshtml
@@ -6,7 +6,7 @@
 @using (Html.BeginForm())
 {
     <div class="content-shadow">
-        <div class="content-inner">
+        <div class="content-inner dark-bg">
             <h2>Settings</h2>
             <div class="form-group">
                 @Html.LabelFor(x => x.AvailableCredit, "Available Credit")
