--- a/Appology.MVC/Areas/Finance/Views/Monzo/ApproveDataAccess.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/Monzo/ApproveDataAccess.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="content-shadow">
-    <div class="content-inner">
+    <div class="content-inner dark-bg">
         <h2>Open Monzo App to approve data access...</h2>
 
         @Html.ActionLink(
