--- a/Appology.MVC/Areas/Finance/Views/Monzo/Index.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/Monzo/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="content-shadow">
-    <div class="content-inner">
+    <div class="content-inner dark-bg">
         <h1 class="text-center">@ViewBag.Title</h1>
         @Html.ActionLink("Login with Monzo", "Login", new { }, new { @class = "btn btn-lg btn-primary", role = "button" })
     </div>
