--- a/Appology.MVC/Areas/Finance/Views/Monzo/OAuthCallback.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/Monzo/OAuthCallback.cshtml
@@ -19,7 +19,7 @@
         @<tr>
             <td colspan="2" style="padding: 0px">
                 <div class="content-shadow">
-                    <div class="content-inner">
+                    <div class="content-inner light-bg">
                         <div class="d-flex justify-content-center">
                             <span class="badge badge-primary bank-details" style="margin-right: 5px">Accout No: @Model.AccountNo</span>
                             <span class="badge badge-primary bank-details">Sort Code: @SortCodeFormat</span>
@@ -111,139 +111,3 @@
         })
     }
 }
-        @*<div class="content-shadow">
-                <div class="content-inner">
-
-                    <div class="d-flex justify-content-center">
-                        <span class="badge badge-primary" style="font-size: 18px; margin-right: 5px">Accout No: @Model.AccountNo</span>
-                        <span class="badge badge-primary" style="font-size: 18px">Sort Code: @SortCodeFormat</span>
-                    </div>
-                    <div class="col-xs-12 alert alert-warning">
-                        <a href='@Url.Action("Login", "Monzo")'><img src='@Url.Content("~/Content/img/monzo_icon.png")' align="right" /></a>
-                        <i class="fas fa-exclamation-triangle"></i> Last Updated: @Model.LastSynced.ToString("dd/MM/yyyy HH:mm")
-                    </div>
-                    @if (Model.Modal != null)
-                    {
-                    @Html.Partial("_BootBox", Model.Modal)
-                    }
-
-                    <div class="float-left">
-                        <span style="font-size: 15px" class="badge badge-warning">Balance: @Utils.ToCurrency(Model.Balance)</span>
-                    </div>
-
-                    <div class="float-right" style="float: right">
-                        <span style="font-size: 15px" class="badge badge-success">Spent Today: @Utils.ToCurrency(-Model.SpentToday)</span>
-                    </div>
-
-                    @if (Model.PendingTransactions.Any())
-                    {
-                        <table class="table table-hover">
-                            <thead class="">
-                                <tr>
-                                    <th scope="col" colspan="4" class="text-warning">
-                                        Pending Transactions
-                                        <a href="@Url.Action("ApproveDataAccess", "Monzo", new { showPotAndTags = !Model.ShowPotAndTags })" class="top-menu pull-right">
-                                            <i class="fas fa-info-sign"></i> @(Model.ShowPotAndTags ? "Hide" : "Show")
-                                        </a>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var transaction in Model.PendingTransactions)
-                                {
-                    var plus = (transaction.Amount > 0 ? "+" : null);
-                    var color = (transaction.Amount > 0 ? "green" : null);
-                                    <tr>
-                                        <td width="10%"><img src="@(transaction.Logo)" width="32" height="32" class="img-rounded" onerror="this.src='@Url.Content("~/Content/img/myfinanceapp.png")'" /></td>
-                                        <td title="@transaction.Description"> <br />@transaction.Name<small style="display: @(Model.ShowPotAndTags ? "block" : "none")">(@transaction.Category) @transaction.Description - @transaction.Id <font color="red">@transaction.DeclineReason</font></small></td>
-                                        <td>@(transaction.Created.ToShortDateString()) <small>(@(transaction.Created.ToShortTimeString()))</small></td>
-                                        <td class="text-right">
-                                            <font color="@color"><strong>@plus@Utils.ToCurrency(transaction.Amount / 100m)</strong></font>
-                                        </td>
-                                    </tr>
-
-                                }
-                            </tbody>
-                        </table>
-                    }
-                    else
-                {
-                        <div class="col-xs-12 alert alert-success">
-                            <div class="fas fa-ok"></div>
-                            <div>There are no pending transactions</div>
-                        </div>
-                    }
-                    @if (Model.UnsyncedTransactions.Any())
-                    {
-                        <table class="table table-hover">
-                            <thead class="">
-                                <tr>
-                                    <th scope="col" colspan="4" class="text-success">
-                                        Unsynced Transactions
-                                        <a href="@Url.Action("ApproveDataAccess", "Monzo", new { showPotAndTags = !Model.ShowPotAndTags })" class="top-menu pull-right">
-                                            <i class="fas fa-info-sign"></i> @(Model.ShowPotAndTags ? "Hide" : "Show")
-                                        </a>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var transaction in Model.UnsyncedTransactions.Where(x => x.Name != "ATM").OrderByDescending(x => x.Created))
-                                {
-                    var plus = (transaction.Amount > 0 ? "+" : null);
-                    var color = (transaction.Amount > 0 ? "green" : null);
-                                    <tr>
-                                        <td width="10%"><img src="@(transaction.Logo)" width="32" height="32" class="img-rounded" onerror="this.src='@Url.Content("~/Content/img/myfinanceapp.png")'" /></td>
-                                        <td title="@transaction.Description settled on @transaction.Settled"> <br />@transaction.Name<small style="display: @(Model.ShowPotAndTags ? "block" : "none")">(@transaction.Category) @transaction.Description - @transaction.Id <font color="red">@transaction.DeclineReason</font></small></td>
-                                        <td>@(transaction.Created.ToShortDateString()) <small>(@(transaction.Created.ToShortTimeString()))</small></td>
-                                        <td class="text-right">
-                                            <small>@Html.ActionLink("(sync)", "AddTransaction", "Monzo", new { monzoTransId = transaction.Id, transaction.Name, transaction.Amount, date = transaction.Created.ToString("yyyy-MM-ddTHH:mm") }, new { target = "_blank" })</small>
-                                            <small>@Html.ActionLink("(void)", "DeleteTransaction", "Monzo", new { monzoTransId = transaction.Id }, new { onclick = "return confirm('Are you sure you wish to delete this unsycned transaction?');" })</small>
-
-                                            <font color="@color"><strong>@plus@Utils.ToCurrency(transaction.Amount / 100m)</strong></font>
-                                        </td>
-                                    </tr>
-
-                                }
-                            </tbody>
-                        </table>
-                    }
-                    else
-                {
-                        <div class="col-xs-12 alert alert-success">
-                            <div class="fas fa-ok"></div>
-                            <div>There are no unsycned transactions</div>
-                        </div>
-                    }
-                    @if (Model.SettledTransactions.Any())
-                    {
-                        <table class="table table-hover">
-                            <thead class="">
-                                <tr>
-                                    <th scope="col" colspan="4" class="text-success">
-                                        Settled Transactions
-                                        <a href="@Url.Action("ApproveDataAccess", "Monzo", new { showPotAndTags = !Model.ShowPotAndTags })" class="top-menu pull-right">
-                                            <i class="fas fa-info-sign"></i> @(Model.ShowPotAndTags ? "Hide" : "Show")
-                                        </a>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var transaction in Model.SettledTransactions)
-                                {
-                    var plus = (transaction.Amount > 0 ? "+" : null);
-                    var color = (transaction.Amount > 0 ? "green" : null);
-                                    <tr>
-                                        <td width="10%"><img src="@(transaction.Logo)" width="32" height="32" class="img-rounded" onerror="this.src='@Url.Content("~/Content/img/myfinanceapp.png")'" /></td>
-                                        <td title="@transaction.Description settled on @transaction.Settled"> <br />@transaction.Name <small style="display: @(Model.ShowPotAndTags ? "block" : "none")">(@transaction.Category) @transaction.Description - @transaction.Id <font color="red">@transaction.DeclineReason</font></small></td>
-                                        <td>@(transaction.Created.ToShortDateString()) <small>(@(transaction.Created.ToShortTimeString()))</small></td>
-                                        <td class="text-right">
-                                            <font color="@color"><strong>@plus@Utils.ToCurrency(transaction.Amount / 100m)</strong></font>
-                                        </td>
-                                    </tr>
-
-                                }
-                            </tbody>
-                        </table>
-                    }
-                </div>
-            </div>*@
