--- a/Appology.MVC/Areas/Finance/Views/App/Categories.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/App/Categories.cshtml
@@ -9,8 +9,10 @@
 
 </style>
 <div id="root" class="content-shadow">
-    <div class="content-inner">
-        <h2>Spending Categories</h2>
+    <div class="content-inner dark-bg">
+        <h4>
+            <span class="fas fa-wallet"> Spending Categories</span>
+        </h4>
 
         <table class="table table-hover">
             <thead>
@@ -64,7 +66,9 @@
             </tbody>
         </table>
 
-        <h2>Income Categories</h2>
+        <h4>
+            <span class="fas fa-wallet"> Income Categories</span>
+        </h4>
 
         <table class="table table-hover">
             <thead>
