--- a/Appology.MVC/Areas/Finance/Views/Monzo/AddTransaction.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/Monzo/AddTransaction.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="content-shadow">
-    <div class="content-inner">
+    <div class="content-inner dark-bg">
         <h2>Add @Enum.GetName(typeof(CategoryType), Model.Type)</h2>
         <form action="@Url.Action((Model.Type == CategoryType.Spendings ? "AddSpending" : "AddIncome"), "Monzo")" method="post" class="form-horizontal">
             @if (Model.Type == CategoryType.Spendings)
