--- a/Appology.MVC/Areas/Write/Views/Document/Index.cshtml
+++ b/Appology.MVC/Areas/Write/Views/Document/Index.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
 <div class="content-shadow">
-    <div class="content-inner" style="background: #fff">
+    <div class="content-inner light-bg">
         <h4>
             <i class="fas fa-pen-alt"></i> Write
         </h4>
