--- a/Appology.MVC/Content/Site.css
+++ b/Appology.MVC/Content/Site.css
@@ -174,10 +174,20 @@ textarea {
     margin: 0 auto;
     padding: 20px;
     height: auto;
-    background: #F2F2F2;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 2px #fff inset, -1px -1px 2px #fff inset;
     border-radius: 3px/6px;
+}
+
+.light-bg {
+    background-color: #fff;
+}
+
+.dark-bg {
+    background-color: rgba(242,242,242,0.6);
+    -moz-transition: background-color 1.5s ease;
+    -webkit-transition: background-color 1.5s ease;
+    transition: background-color 1.5s ease;
 }
 
 /* react app */
