--- a/Appology.MVC/Views/Shared/_Layout.cshtml
+++ b/Appology.MVC/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                         {
                             if (Model.AccessibleFeatures.Any(x => x.Id == Features.Calendar))
                             {
-                                <li class="@(Model.MenuItem.Home || Model.MenuItem.MultiAdd || Model.MenuItem.Overview || Model.MenuItem.Cronofy ? "current-menu" : "")">
+                                <li class="@(Model.MenuItem.Home || Model.MenuItem.MultiAdd || Model.MenuItem.ActivityHub || Model.MenuItem.Cronofy ? "current-menu" : "")">
                                     <a href="#">Calendar</a>
                                     <ul>
                                         <li>
@@ -81,7 +81,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a style="@(Model.MenuItem.Overview ? "color:#09c" : "")" href="@Url.MvcRouteUrl(Section.Overview)">
+                                            <a style="@(Model.MenuItem.ActivityHub ? "color:#09c" : "")" href="@Url.MvcRouteUrl(Section.ActivityHub)">
                                                 <i class="fas fa-chart-bar"></i> Activity Hub
                                             </a>
                                         </li>
