--- a/Appology.MVC/Areas/Calendar/Views/Event/ActivityHub.cshtml
+++ b/Appology.MVC/Areas/Calendar/Views/Event/ActivityHub.cshtml
@@ -67,11 +67,11 @@
                                 {
                                     <div class="list-group-item">
                                         <span class="fas @e.ActivityTag" style="color: @e.Color"></span> <small> @e.Text</small>
-                                        @if (e.TargetWeeklyHours != 0)
+                                        @if (e.ProgressBarWeeklyHours.TargetWeeklyHours != 0 && e.ProgressBarWeeklyHours.ProgressBarPercentage > 0)
                                         {
                                             <div class="progress">
-                                              <div class="progress-bar progress-bar-striped progress-bar-animated @e.ProgressBarColor" role="progressbar" aria-valuenow="@e.ActualWeeklyHours" aria-valuemin="0" aria-valuemax="@e.TargetWeeklyHours" style="width: @(e.ProgressBarPercentage)%">
-                                                  @(e.ProgressBarPercentage)% complete targetting @e.TargetWeeklyHours hours
+                                              <div class="progress-bar progress-bar-striped progress-bar-animated @e.ProgressBarWeeklyHours.ProgressBarColor" role="progressbar" aria-valuenow="@e.ProgressBarWeeklyHours.ActualWeeklyHours" aria-valuemin="0" aria-valuemax="@e.ProgressBarWeeklyHours.TargetWeeklyHours" style="width: @(e.ProgressBarWeeklyHours.ProgressBarPercentage)%">
+                                                  @(e.ProgressBarWeeklyHours.ProgressBarPercentage)% complete targetting @e.ProgressBarWeeklyHours.TargetWeeklyHours hours a week
                                               </div>
                                             </div>
                                         }
